<resources>
    <string name="app_name">Ultra Media Player</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="nav_item_music">Music</string>
    <string name="nav_item_videos">Videos</string>
    <string name="nav_item_images">Images</string>

    <string name="nav_sub_menu">Online Media</string>
    <string name="nav_sub_menu_item01">Deezer</string>
    <string name="nav_sub_menu_item02">Youtube</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="song_list_add_to_favourite">Add to Favourites</string>
    <string name="song_list_add_to_playlist">Add to Playlist</string>
    <string name="song_list_set_as_ringtone">Set as Ringtone</string>
    <string name="favourite_remove_song">Remove Song</string>
    <string name="main_activity_playback_control">Main Activity Playback Control</string>
    <string name="main_activity_playback_album_art">Main Activity Playback AlbumArt</string>
    <string name="playlist_album_art">Playlist album art</string>
    <string name="playlist_more_button">Playlist More Button</string>
    <string name="play_playlist_songs">Play Songs</string>
    <string name="add_songs_to_playlist">Add Songs</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="full_playlist_song_list_remove_song_label">Remove Song</string>
    <string name="album_shuffle_title">Shuffle Songs</string>
    <string name="add_album_to_playlist">Add to Playlist</string>
    <string name="go_to_artist">Go to Artist</string>

</resources>
